# docs/api/mempool/sidebar.js
@@ -1,1 +1,1 @@
-module.exports = [{"type":"doc","id":"api/mempool/mempool-api"},{"type":"category","label":"info","link":{"type":"doc","id":"api/mempool/info"},"collapsible":false,"items":[{"type":"doc","id":"api/mempool/debug-data","label":"debug_data","className":"api-method get"}]},{"type":"category","label":"transaction","link":{"type":"doc","id":"api/mempool/transaction"},"collapsible":false,"items":[{"type":"doc","id":"api/mempool/create-tx","label":"create_transactions","className":"api-method post"},{"type":"doc","id":"api/mempool/create-item-asset","label":"create_item_asset","className":"api-method post"}]},{"type":"category","label":"address","link":{"type":"doc","id":"api/mempool/address"},"collapsible":false,"items":[{"type":"doc","id":"api/mempool/fetch-balance","label":"fetch_balance","className":"api-method post"}]}];
+module.exports = [{"type":"doc","id":"api/mempool/mempool-api"},{"type":"category","label":"info","link":{"type":"doc","id":"api/mempool/info"},"collapsible":false,"items":[{"type":"doc","id":"api/mempool/debug-data","label":"debug_data","className":"api-method get"},{"type":"doc","id":"api/mempool/total-supply","label":"total_supply","className":"api-method get"},{"type":"doc","id":"api/mempool/issued-supply","label":"issued","className":"api-method get"}]},{"type":"category","label":"transaction","link":{"type":"doc","id":"api/mempool/transaction"},"collapsible":false,"items":[{"type":"doc","id":"api/mempool/create-tx","label":"create_transactions","className":"api-method post"},{"type":"doc","id":"api/mempool/create-item-asset","label":"create_item_asset","className":"api-method post"}]},{"type":"category","label":"address","link":{"type":"doc","id":"api/mempool/address"},"collapsible":false,"items":[{"type":"doc","id":"api/mempool/fetch-balance","label":"fetch_balance","className":"api-method post"}]}];
